<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">midialog</string>
    <string name="mi_default_text_positive">Positive</string>
    <string name="mi_default_text_negative">Negative</string>
    <string name="mi_default_text_neutral">Neutral</string>
    <string name="tv_confirm_password">确认密码</string>
    <string name="tv_password">密码</string>
    <string name="hint_please_confirm_password">请确认密码</string>
    <string name="hint_please_input_password">请输入6-20位长度密码</string>
    <string name="hint_samba_input_password">请输入6-20位数字、字母组合密码</string>
    <string name="tv_not_show_again">下次不再提醒</string>
    <string name="txt_please_input_content">请输入您的内容</string>

</resources>
