<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layout_dialog"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_lenovo_dialog_radius"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mi_dialog_margin"
        android:layout_marginTop="@dimen/mi_widget_margin"
        android:layout_marginRight="@dimen/mi_dialog_margin"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:paddingStart="@dimen/mi_dialog_margin"
        android:paddingEnd="@dimen/mi_dialog_margin"
        android:textSize="@dimen/text_size_14" />

    <EditText
        android:id="@+id/et_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mi_dialog_margin"
        android:layout_marginRight="@dimen/mi_dialog_margin"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_dialog_edittext"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/txt_please_input_content"
        android:padding="10dp"
        android:inputType="textMultiLine|text"
        android:singleLine="true"
        android:textColorHint="@color/color_mi_edittext_hint"
        android:textCursorDrawable="@drawable/solid_shape_bottom_line"
        android:textSize="@dimen/text_size_16"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_dialog_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:paddingStart="@dimen/mi_dialog_margin"
        android:paddingEnd="@dimen/mi_dialog_margin"
        android:textSize="@dimen/text_size_14" />

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mi_dialog_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/mi_dialog_margin"
        android:cursorVisible="true"
        android:inputType="text"
        android:itemBackground="@color/white"
        android:textColor="@color/color_mi_primary_text"
        android:textColorHint="@color/color_mi_edittext_hint"
        android:textSize="@dimen/text_size_14"
        android:visibility="gone"
        app:cursorColor="@color/orange"
        app:cursorWidth="1dp"
        app:itemHeight="@dimen/mi_dialog_confirm_edittext_size"
        app:itemRadius="@dimen/mi_dialog_edittext_radius"
        app:itemSpacing="10dp"
        app:itemWidth="@dimen/mi_dialog_confirm_edittext_size"
        app:lineColor="@color/color_mi_edittext_border"
        app:lineWidth="1px"
        app:viewType="rectangle" />

    <LinearLayout
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/mi_dialog_list_divider_height"
            android:background="@color/color_mi_list_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mi_widget_margin"
        android:layout_marginTop="22dp"
        android:layout_marginRight="@dimen/mi_widget_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_dialog_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SAMBA账号"
                android:textColor="@color/color_mi_primary_text"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:id="@+id/tv_dialog_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/tv_dialog_one"
                android:text="123456"
                android:textColor="@color/color_mi_primary_text"
                android:textSize="@dimen/text_size_12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp">

            <!--<TextView-->
            <!--android:id="@+id/tv_input_one"-->
            <!--android:layout_width="56dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="@string/tv_password"-->
            <!--android:textColor="@color/color_mi_primary_text"-->
            <!--android:textSize="@dimen/text_size_12" />-->


            <EditText
                android:id="@+id/edit_input_one"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/hint_samba_input_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/color_mi_primary_text"
                android:textColorHint="@color/color_mi_edittext_hint"
                android:textCursorDrawable="@drawable/solid_shape_bottom_line"
                android:textSize="@dimen/text_size_12"
                android:theme="@style/MyEditText" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edit_input_two"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/hint_please_confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/color_mi_primary_text"
                android:textColorHint="@color/color_mi_edittext_hint"
                android:textCursorDrawable="@drawable/solid_shape_bottom_line"
                android:textSize="@dimen/text_size_12"
                android:theme="@style/MyEditText" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mi_dialog_button_height"
        android:layout_marginStart="@dimen/mi_dialog_margin"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-25dp"
        android:gravity="center_vertical"
        android:visibility="visible">

        <CheckBox
            android:id="@+id/cb_select"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_check_box_radio"
            android:button="@null"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/cb_select"
            android:text="@string/tv_not_show_again"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/color_mi_edittext_hint"
            android:textSize="@dimen/text_size_12" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_dialog_mid"
            android:layout_width="225dp"
            android:layout_height="@dimen/mi_dialog_button_height"
            android:layout_marginTop="@dimen/mi_dialog_button_height"
            android:layout_marginBottom="25dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/selector_bg_lenovo_dialog_button_right"
            android:text="@string/mi_default_text_neutral"
            android:textColor="@color/white"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mi_dialog_button_height"
        android:layout_marginTop="@dimen/mi_widget_margin"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_dialog_left"
            android:layout_width="115dp"
            android:layout_height="@dimen/mi_dialog_button_height"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_bg_lenovo_dialog_button_left"
            android:text="@string/mi_default_text_negative"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/color_text_black" />

        <Button
            android:id="@+id/btn_dialog_right"
            android:layout_width="115dp"
            android:layout_height="@dimen/mi_dialog_button_height"
            android:background="@drawable/selector_bg_lenovo_dialog_button_right"
            android:text="@string/mi_default_text_positive"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>